Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63593

macOS: webenginewidgets/spellchecker not compiling

XMLWordPrintable

    • macOS

      Install clang_64 binaries with testclient, launch QtCreator and open webenginewidgets/spellchecker project and compile. Build fails with:

      13:54:06: Starting: "/usr/bin/make"
      /Users/qt/Qt_testclient/5.10.0/clang_64/bin/qwebengine_convert_dict ../spellchecker/dict/en/en-US.dic qtwebengine_dictionaries/en-US.bdic
      Couldn't find ICU data directory. Please check that the following path exists: /Users/qt/Qt_testclient/Examples/Qt-5.10.0/webenginewidgets/resources
      Alternatively provide the directory path via the QT_WEBENGINE_ICU_DAT_DIR environment variable.
      make: *** [qtwebengine_dictionaries/en-US.bdic] Error 1
      13:54:06: The process "/usr/bin/make" exited with code 2.
      Error while building/deploying project spellchecker (kit: Desktop Qt 5.10.0 clang 64bit)
      When executing step "Make"
      13:54:06: Elapsed time: 00:00.
      

      For example webenginewidgets/simplebrowser gets compiled fine.

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            alexandru.croitor Alexandru Croitor
            joaijala Johanna Äijälä
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes